tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_bound_checks_overflowing_u8/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: The value `256` cannot fit into `u8` which has range `0..=255`
  ┌─ src/main.nr:3:25
  │
3 │             let _: u8 = 256;
  │                         ---
  │

Aborting due to 1 previous error
